--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,12 @@ h1{
     font-family: 'Trebuchet MS', sans-serif;
 }
 nav{
+    display: inline-block;
     margin: 0;
     padding: 10px;
     font-family: Arial, sans-serif;
     /*background-color: #4beaff;*/
     text-align: center;
-    display: inline-block;
     width: 80%
 }
 nav ul li{
@@ -60,7 +60,7 @@ main{
 
 }
 footer{
-    background-color: #b5b2b2;
+    background-color: #fef5f5;
     color: #000000;
     text-align: center;
     padding: 10px 0;
